<package>
  <name>dtu_smr</name>
  <version>0.0.1</version>
  <description>DTU SMR Interface</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD 3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roscpp</run_depend>
</package>
