<?xml version="1.0"?>
<package>
  <name>frobit_plot</name>
  <version>0.0.0</version>
  <description>The frobit_plot package</description>

  <maintainer email="kjeld@frobomind.org">Kjeld Jensen</maintainer>
  <url type="website">http://www.frobomind.org</url>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>

